<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.tourist.proof.AddProofLeaderFragment">

    <TextView
        android:id="@+id/leader_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leader_undecorated"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leader_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/id_no_undecorated"
        android:textSize="20sp"
        android:labelFor="@id/leader_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leader_title_label" />

    <EditText
        android:id="@+id/leader_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginHorizontal="10dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@id/leader_id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/leader_id_label"
        android:autofillHints=".AUTOFILL_HINT_NOT_APPLICABLE"/>

    <TextView
        android:id="@+id/leader_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_and_surname"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leader_id" />

    <TextView
        android:id="@+id/leader_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/leader_name_label"
        app:layout_constraintTop_toTopOf="@id/leader_name_label" />

    <Button
        android:id="@+id/leader_proof_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:backgroundTint="@color/red"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/leader_proof_save" />

    <Button
        android:id="@+id/leader_proof_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/green"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/leader_proof_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>