<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.leader.ConfirmRouteListFragment">

    <TextView
        android:id="@+id/confirm_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_route_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tourist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/route_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tourist_name"
        app:layout_constraintStart_toStartOf="@id/tourist_name"/>

    <TextView
        android:id="@+id/confirm_route_points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/points"
        app:layout_constraintStart_toStartOf="@id/tourist_name"
        app:layout_constraintTop_toBottomOf="@id/route_date" />

    <TextView
        android:id="@+id/confirm_route_points_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toTopOf="@id/confirm_route_points_label"
        app:layout_constraintStart_toEndOf="@id/confirm_route_points_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/confirm_route_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@id/confirm_route_points_label"
        app:layout_constraintTop_toBottomOf="@id/confirm_route_points_value" />

    <TextView
        android:id="@+id/confirm_route_start_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toTopOf="@id/confirm_route_start_label"
        app:layout_constraintStart_toEndOf="@id/confirm_route_start_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/confirm_route_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        app:layout_constraintStart_toStartOf="@id/confirm_route_points_label"
        app:layout_constraintTop_toBottomOf="@id/confirm_route_start_value" />

    <TextView
        android:id="@+id/confirm_route_end_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toTopOf="@id/confirm_route_end_label"
        app:layout_constraintStart_toEndOf="@id/confirm_route_end_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/confirm_route_mountain_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mountain_group"
        app:layout_constraintStart_toStartOf="@id/confirm_route_end_label"
        app:layout_constraintTop_toBottomOf="@id/confirm_route_end_value" />

    <TextView
        android:id="@+id/confirm_route_mountain_group_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintTop_toTopOf="@id/confirm_route_mountain_group_label"
        app:layout_constraintStart_toEndOf="@id/confirm_route_mountain_group_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/show_route_sections"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_mountain_passes"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/show_on_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/show_on_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_on_map"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/show_route_proofs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/show_route_proofs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_proofs"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/reject_route"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reject_route"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reject_route"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirm_route" />

    <Button
        android:id="@+id/confirm_route"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_route"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reject_route" />

</androidx.constraintlayout.widget.ConstraintLayout>