<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.member.MountainPassDetailsFragment">

    <TextView
        android:id="@+id/mountain_pass_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_point_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mountain_pass_details_label" />

    <TextView
        android:id="@+id/start_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/start_point_label"
        app:layout_constraintStart_toEndOf="@id/start_point_label" />

    <TextView
        android:id="@+id/end_point_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/end"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_point" />

    <TextView
        android:id="@+id/end_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/end_point_label"
        app:layout_constraintStart_toEndOf="@id/end_point_label" />

    <TextView
        android:id="@+id/points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/points"
        app:layout_constraintStart_toStartOf="@id/start_point_label"
        app:layout_constraintTop_toBottomOf="@id/end_point" />

    <TextView
        android:id="@+id/points_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/points_label"
        app:layout_constraintStart_toEndOf="@id/points_label" />

    <TextView
        android:id="@+id/point_through_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/through"
        app:layout_constraintStart_toStartOf="@id/start_point_label"
        app:layout_constraintTop_toBottomOf="@id/points_value" />

    <TextView
        android:id="@+id/point_through"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/point_through_label"
        app:layout_constraintStart_toEndOf="@id/point_through_label" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@id/start_point_label"
        app:layout_constraintTop_toBottomOf="@id/point_through" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_label"
        app:layout_constraintStart_toEndOf="@id/name_label" />

    <TextView
        android:id="@+id/mountain_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/mountain_group"
        app:layout_constraintStart_toStartOf="@id/start_point_label"
        app:layout_constraintTop_toBottomOf="@id/name_value" />

    <TextView
        android:id="@+id/mountain_group_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mountain_group_label"
        app:layout_constraintStart_toEndOf="@id/mountain_group_label" />

    <TextView
        android:id="@+id/mountain_range_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/mountain_range"
        app:layout_constraintStart_toStartOf="@id/start_point_label"
        app:layout_constraintTop_toBottomOf="@id/mountain_group_value" />

    <TextView
        android:id="@+id/mountain_range_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mountain_range_label"
        app:layout_constraintStart_toEndOf="@id/mountain_range_label" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/status"
        app:layout_constraintStart_toStartOf="@id/start_point_label"
        app:layout_constraintTop_toBottomOf="@id/mountain_range_value" />

    <TextView
        android:id="@+id/status_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/status_label"
        app:layout_constraintStart_toEndOf="@id/status_label" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pass_delete"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@id/edit_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pass_edit"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>